# posagentpro-src

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about.ui  base64.cpp  base64.hpp  component.hpp  escpos.cpp  escpos.hpp  eventclient.cpp  eventclient.h  eventdata.h  eventsystem.cpp  eventsystem.h  globals.hpp  hardware.cpp  hardware.hpp  helpers.cpp  helpers.hpp  httptime.cpp  httptime.hpp  inputfield.cpp  inputfield.hpp  jpeg.cpp  jpeg.hpp  jpeg_load.c  json.cpp  json.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagesystem.cpp  messagesystem.h  object.hpp  posagent_resource.rc  printagent.qrc  printer.cpp  printer.hpp  (+15 more)
build-printagent-Desktop-Debug/printagent_autogen/: mocs_compilation.cpp
build-printagent-Desktop-Debug/printagent_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_printerlist.cpp
build-printagent-Desktop-Debug/printagent_autogen/include/: ui_mainwindow.h
libjpeg-turbo64/lib/: jpeg.lib  turbojpeg-static.lib  turbojpeg.lib
libjpeg-turbo64/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
uWebSockets/: Broadcast  BroadcastingEchoServer  EchoServer  EchoServerThreaded  HelloWorld  HelloWorldThreaded  Http3Server  ServerName  UpgradeAsync  UpgradeSync
uWebSockets/tests/: BloomFilter  ExtensionsNegotiator  HttpParser  HttpRouter  TopicTree
uWebSockets/uSockets/: Makefile  uSockets.sln  uSockets.vcxproj  uv_a.lib
uWebSockets/uSockets/examples/: hammer_test_unix.c
uWebSockets/uSockets/x64/Debug/: uSockets.exp  uSockets.lib
uWebSockets/uSockets/x64/Debug/uSockets.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  uSockets.lastbuildstate
uWebSockets/uSockets/x64/Release/: uSockets.dll.recipe  uSockets.exp  uSockets.ilk  uSockets.vcxproj.FileListAbsolute.txt
uWebSockets/uSockets/x64/Release/uSockets.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  uSockets.lastbuildstate  uSockets.write.1u.tlog
winlibs/: uSockets.lib  zlibstatic.lib
